prevent flicker using ng-cloak attribute

--- a/sass/partials/_globals.scss
+++ b/sass/partials/_globals.scss
@@ -1,3 +1,5 @@
+.ng-cloak, [ng-cloak] { display: none; }
+
 $usersHaveAvatars: false;
 $widgetHasFooter: true;
 $widgetWidth: 100%;
